# ParserDoc

./: .dockerignore  .env.example  .gitattributes  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  serve.py
.agents/: dokploy-deploy.md
app/: __init__.py  main.py  models.py  settings.py
app/parsers/: __init__.py  base.py  doc.py  docx.py  pdf.py  rtf.py  spreadsheet.py  text.py
app/services/: __init__.py  extractor.py  normalizer.py
app/static/: index.html
docs/: PROJECT_CONTEXT.md  kods.txt  Видео_разбор.doc  Видео_разбор.docx  Видео_разбор.rtf  МГУ_фсперантура.xls  МГУ_фсперантура.xlsx
tests/: test_core.py
