[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parserdoc"
version = "0.1.0"
description = "Async document parsing service for n8n and AI workflows"
readme = "docs/PROJECT_CONTEXT.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "PyMuPDF>=1.24",
  "striprtf>=0.0.26",
  "xlrd>=2.0",
]

[tool.setuptools]
packages = ["app", "app.parsers", "app.services"]
